--- a/Seção05/App01_ConsultarCEP/App01_ConsultarCEP/MainPage.xaml
+++ b/Seção05/App01_ConsultarCEP/App01_ConsultarCEP/MainPage.xaml
@@ -3,12 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:App01_ConsultarCEP"
              x:Class="App01_ConsultarCEP.MainPage">
-    <StackLayout BackgroundColor="#FFBF00">
+    
+    <StackLayout 
+        BackgroundColor="#FFBF00" 
+        Padding="30"
+        Spacing="30">        
         <Image Source="logo.png"/>
-        <Entry Placeholder="Digite o CEP" PlaceholderColor="#FFBF00" BackgroundColor="#FFFFFF"/>
-        <Button Text="Buscar CEP" TextColor="#FFFFFF" BackgroundColor="#00416B"/>
-        <Label Text="Bem vindo a Xamarin.Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+        <Entry Placeholder="Digite o CEP" 
+               PlaceholderColor="#FFBF00" 
+               BackgroundColor="#FFFFFF"/>
+        <Button Text="Buscar CEP" 
+                TextColor="#FFFFFF" 
+                BackgroundColor="#00416B"/>
+        <Label Text="Bem vindo a Xamarin.Forms!"
+               VerticalOptions="Center" 
+               HorizontalOptions="Center" />
     </StackLayout>
+
 </ContentPage>
