Clonaod o projeto depois de ter gerado erro e não conseguir mais utilizar o projeto

--- a/App01_ConsultarCEP/App01_ConsultarCEP/MainPage.xaml
+++ b/App01_ConsultarCEP/App01_ConsultarCEP/MainPage.xaml
@@ -8,7 +8,7 @@
         BackgroundColor="#FFBF00" 
         Padding="30"
         Spacing="30">        
-        <Image Source="logo.png"/>
+        <Image Source="Logo.png"/>
         <Entry Placeholder="Digite o CEP" 
                PlaceholderColor="#FFBF00" 
                BackgroundColor="#FFFFFF"
